--- a/config/waystones/config.json
+++ b/config/waystones/config.json
@@ -5,8 +5,8 @@
   "free_local_void_teleport": true,
   "store_waystone_data_on_sneak_break": true,
   "can_owners_redeem_payments": false,
-  "cost_amount": 1,
-  "cost_type": "level",
+  "cost_amount": 100,
+  "cost_type": "xp",
   "cost_item": "minecraft:ender_pearl",
   "waystone_block_hardness": 4.0,
   "waystone_block_required_mining_level": 1,
