--- a/mods/fabric-shield-lib.toml
+++ b/mods/fabric-shield-lib.toml
@@ -1,13 +1,13 @@
 name = "Fabric Shield Lib"
-filename = "FabricShieldLib-1.5.1-pre1-1.18.jar"
+filename = "FabricShieldLib-1.5.2-1.18.jar"
 side = "both"
 
 [download]
-url = "https://edge.forgecdn.net/files/3650/376/FabricShieldLib-1.5.1-pre1-1.18.jar"
+url = "https://edge.forgecdn.net/files/3671/171/FabricShieldLib-1.5.2-1.18.jar"
 hash-format = "murmur2"
-hash = "778522579"
+hash = "4130460008"
 
 [update]
 [update.curseforge]
-file-id = 3650376
+file-id = 3671171
 project-id = 380649
